# self-host-fusion360-MCP

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  start-webui.bat
.github/workflows/: ci.yml
addin/Fusion360MCP/: Fusion360MCP.manifest  Fusion360MCP.py
addin/Fusion360MCP/fusion_mcp_addin/: __init__.py  config.py
addin/Fusion360MCP/fusion_mcp_addin/bridge/: __init__.py  dialog_guard.py  dispatcher.py  http_server.py  protocol.py
addin/Fusion360MCP/fusion_mcp_addin/ops/: __init__.py  _common.py  api.py  assembly.py  body.py  cam.py  construction.py  document.py  edit.py  export.py  feature.py  material.py  parameter.py  primitive.py  query.py  script.py  sheetmetal.py  sketch.py  surface.py  system.py  units.py  view.py
docs/: ARCHITECTURE.md  TOOLS.md  TROUBLESHOOTING.en.md  TROUBLESHOOTING.zh-CN.md  manual.en.md  manual.zh-CN.md
install/: claude_config_merge.py  gen_token.py  windows-install.bat  windows-install.ps1  windows-uninstall.ps1
scripts/: demo_assembly.py  demo_conversation.py  demo_flange.py  demo_pegboard_tissue.py  doctor.py  gen_tools_doc.py  livetest.py  rpc.py  smoketest.py  smoketest_advanced.py  win_dialogs.py
server/fusion_mcp/: __init__.py  app.py  cli.py  client.py  clientconfig.py  config.py  doctor.py  errors.py
server/fusion_mcp/tools/: __init__.py  _helpers.py  api.py  assembly.py  body.py  cam.py  construction.py  document.py  edit.py  export.py  feature.py  material.py  parameter.py  primitive.py  query.py  script.py  sketch.py  surface.py  units.py  view.py
server/fusion_mcp/webui/: __init__.py  index.html  server.py
tests/: test_addin_syntax.py  test_client_mock.py  test_clientconfig.py  test_config_and_errors.py  test_config_merge.py  test_tools_schema.py
